--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.stanford.smi.protegex</groupId>
@@ -12,6 +13,20 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>${nexus.path}</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Internal Snapshots</name>
+			<url>${nexus.path}</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 
 	<dependencies>
 		<dependency>
@@ -37,13 +52,13 @@
 			<artifactId>common</artifactId>
 			<version>4.1.0.b213_2010_11_04_0252</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>edu.stanford.bmir.core</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
@@ -70,17 +85,15 @@
 				<version>2.3.1</version>
 			</plugin>
 
-			<!-- 
-				Execution of unit tests
-				Generates output for reporting plugin
-			-->
+			<!-- Execution of unit tests Generates output for reporting plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<!-- We set skip to true. So the unit tests can be explicitly defined in xml file reference below -->
+					<!-- We set skip to true. So the unit tests can be explicitly defined 
+						in xml file reference below -->
 					<skip>true</skip>
-        		</configuration>
+				</configuration>
 				<executions>
 					<execution>
 						<id>unit-tests</id>
@@ -118,22 +131,21 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 
-			<!-- JXR Plugin produces a cross-reference of the project's sources.
-			The generated reports make it easier for the user to reference or
-			find specific lines of code. It is also handy when used with the
-			PMD Plugin for referencing errors found in the code -->
+			<!-- JXR Plugin produces a cross-reference of the project's sources. The 
+				generated reports make it easier for the user to reference or find specific 
+				lines of code. It is also handy when used with the PMD Plugin for referencing 
+				errors found in the code -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
 			</plugin>
 
-			<!--PMD scans Java source code and looks for potential problems like:
-			- Possible bugs - empty try/catch/finally/switch statements
-			- Dead code - unused local variables, parameters and private methods
-			- Suboptimal code - wasteful String/StringBuffer usage
-			- Overcomplicated expressions - unnecessary if statements, for loops that could be while loops
-			- Duplicate code - copied/pasted code means copied/pasted bugs
-			-->
+			<!--PMD scans Java source code and looks for potential problems like: 
+				- Possible bugs - empty try/catch/finally/switch statements - Dead code - 
+				unused local variables, parameters and private methods - Suboptimal code 
+				- wasteful String/StringBuffer usage - Overcomplicated expressions - unnecessary 
+				if statements, for loops that could be while loops - Duplicate code - copied/pasted 
+				code means copied/pasted bugs -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
@@ -149,7 +161,8 @@
 				<artifactId>maven-surefire-report-plugin</artifactId>
 			</plugin>
 
-			<!-- JDepend determines architecture metrics as (cyclic) dependencies of packages -->
+			<!-- JDepend determines architecture metrics as (cyclic) dependencies 
+				of packages -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
@@ -187,21 +200,22 @@
 				<version>1.1.1</version>
 			</plugin>
 
-			<!-- source measurement suite for Java which produces quantity & complexity metrics -->
+			<!-- source measurement suite for Java which produces quantity & complexity 
+				metrics -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>javancss-maven-plugin</artifactId>
 				<version>2.0-beta-2</version>
 			</plugin>
 
-			<!-- XRadar summarizing/consolidating reports-->
+			<!-- XRadar summarizing/consolidating reports -->
 			<plugin>
 				<groupId>net.sf.xradar</groupId>
 				<artifactId>maven-xradar-plugin</artifactId>
 				<version>1.2.2</version>
 				<configuration>
 					<autoRadar>false</autoRadar>
-					<!--false to execute only the plugins declared-->
+					<!--false to execute only the plugins declared -->
 				</configuration>
 			</plugin>
 		</plugins>
